# teste-l5-network

./: README.md  model.pkl  pyproject.toml
app/: __init__.py  models.py
app/routes/: ai.py  game.py  mock.py  player.py
app/services/: ai_model.py  dataset.py  game_logic.py
