[tool.poetry]
name = "teste-l5-networks"
version = "0.1.0"
description = ""
authors = ["caiolul <caiolucena.il@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
